[BE] 메시지에 채널별 시퀀스 중간 구현 #324 (#332)
* feat: 채널별 Sequence Generator 구현

* refactor:시퀀스 정보를 넣어서 DB 저장 정보 변경

* refactor:시퀀스 정보를 넣어서 DB 저장 정보 변경

* feat: 서비스 DB 구조 및 응답형식 변경

* feat: 서버별 마지막 정보 조회 API 구현

* refactor: 서버별 마지막 정보 조회 형식을 MAP으로 변경

* feat: 메시지 도착시 시퀀스 정보 포함하도록 DTO 수정