@@ -356,19 +356,22 @@ public class ServerService {
 
     // 서버 별 채널 마지막 방문 정보 조회
     // GET /servers/{serverId}/channels/info/member/{memberId}
+    @Transactional
     public ServerLastInfoResponseDto getServerChannelLastInfoForApi(Long memberId, Long serverId) {
         ServerLastInfo lastInfo = getServerLastInfo(memberId, serverId);
-        List<ChannelLastInfo> channelLastInfoList = lastInfo.getChannelLastInfoList();
+        Map<Long, ChannelLastInfo> channelLastInfoMap = lastInfo.getChannelLastInfoMap();
         return ServerLastInfoResponseDto.builder()
                 .serverId(serverId)
                 .channelInfoList(
-                        channelLastInfoList.stream()
-                                .map(channelLastInfo -> ChannelLastInfoResponseDto.builder()
-                                        .channelId(channelLastInfo.getChannelId())
-                                        .lastReadMessageId(channelLastInfo.getLastReadMessageId())
-                                        .lastAccessAt(channelLastInfo.getLastAccessAt())
-                                        .build())
-                                .collect(Collectors.toList())
+                        channelLastInfoMap.entrySet().stream()
+                                .map(entry -> ChannelLastInfoResponseDto.builder()
+                                        .channelId(entry.getKey())
+                                        .lastReadMessageId(entry.getValue().getLastReadMessageId())
+                                        .lastReadSequence(entry.getValue().getLastReadSequence())
+                                        .lastAccessAt(entry.getValue().getLastAccessAt())
+                                        .build()
+                                )
+                                .toList()
                 )
                 .build();
     }
@@ -388,17 +391,17 @@ public class ServerService {
         ServerChannelListResponseDto serverChannelList = getServerChannelList(serverId);
         List<Long> channelIdList = serverChannelList.getChannelIdList();
 
-        List<ChannelLastInfo> result = new ArrayList<>();
+       Map<Long, ChannelLastInfo> result = new HashMap<>();
 
         for (Long channelId : channelIdList) {
-            result.add(getChannelLastInfo(channelId, memberId));
+            result.put(channelId, getChannelLastInfo(channelId, memberId));
         }
         ServerLastInfo lastInfo = ServerLastInfo.builder()
                 .serverId(serverId)
-                .channelLastInfoList(result)
+                .channelLastInfoMap(result)
                 .build();
 
-        // 레디스에 캐싱
+        // TODO: 주기적으로 Redis에 저장된 데이터를 PostGreSQL에 저장하는 로직 추가
         memberRedisRepository.saveServerLastInfo(memberId, serverId, lastInfo);
 
         return lastInfo;
@@ -411,6 +414,7 @@ public class ServerService {
         return ChannelLastInfo.builder()
                 .channelId(channelId)
                 .lastReadMessageId(channelMember.getLastReadMessageId())
+                .lastReadSequence(channelMember.getLastReadSequence())
                 .lastAccessAt(channelMember.getLastAccessAt())
                 .build();
     }
